Fixed partner program table on mobile

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -512,7 +512,6 @@ ul
 
     &:hover
       border: solid 2px #212529
-      padding: 9px 10px
       text-decoration: none
 
   &.price
